made some easily reversible changes... if the code still somehow brakes down, just Ctrl+F Suryansh and comment out the changes =)

--- a/templates/landing.html
+++ b/templates/landing.html
@@ -43,8 +43,19 @@
         </div>
         <div class="flex content-center items-center justify-end ">
         <select class="bg-gray-700 text-white p-2 rounded">
-                <option value="en">English</option>
-                <!-- Add other languages here -->
+            <option language_code="en" value="en">English</option>
+                <!-- Suryansh here, I am trying to connect this with other parts of interface, but if this interrupts the code somehow (which i dont think it should) then, kindly just comment it out --> 
+                <option language_code="hi" value="hi">Hindi</option>
+                <option language_code="bn" value="bn">Bengali</option>
+                <option language_code="mr" value="mr">Marathi</option>
+                <option language_code="ta" value="ta">Tamil</option>
+                <option language_code="te" value="te">Telugu</option>
+                <option language_code="ml" value="ml">Malayalam</option>
+                <option language_code="kn" value="kn">Kannada</option>
+                <option language_code="gu" value="gu">Gujarati</option>
+                <option language_code="pa" value="pa">Punjabi</option>
+                <option language_code="or" value="or">Odia</option>
+                <!-- my (suryansh) edit's end here -->
             </select>
         </div>
         </div>
